--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
+    "react-pagination": "^1.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toggle": "^4.1.3",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.0.8",
     "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
