--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-toggle": "^4.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   }
