--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-loader-spinner": "^4.0.0",
     "axios": "^1.5.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.4.5",
     "react-paginate": "^8.2.0",
     "react-pagination": "^1.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toggle": "^4.1.3",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.2",
