--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-pagination": "^1.0.0",
     "react-redux": "^8.1.2",
@@ -58,6 +59,7 @@
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-modal": "^3.16.0",
     "@types/react-toggle": "^4.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
