--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-loader-spinner": "^4.0.0",
     "axios": "^1.5.0",
+    "firebase": "^10.4.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
