--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8",
     "sweetalert2": "^11.7.27",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
