--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.0",
     "firebase": "^10.4.0",
     "formik": "^2.4.3",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
